# aigent

./: .encryption_key  .env  .gitignore  CONTRIBUTING.md  LICENSE  README.md  Untitled.ipynb  access_token.txt  agent_descriptors.db  aigent.ipynb  aigent_gradio_interface.py  aigent_gui.py  config.json  debug_output.txt  dockerfile  encryption_key.key  generate_oauth_token.py  next.config.js  package-lock.json  package.json  pdf_converter.py  pre_poetry_requirements.txt  pyproject.toml  qt_test.py  readme.md  setup_api_keys.py  setup_credentials.py  test_pdf_converter.py  test_spacy.py  tiff_base64.txt  tiff_to_base64.py  updated_generate_oauth_token.py  verify_api_keys.py  verify_spacy.py
DevNotes/: AIGentProjectOverview.md  ClaudeSession20240911B.md
aigent/: .encryption_key  __init__.py  ai_service.py  aigent_gui.py  aigent_gui_test.py  aigent_swarm.py  api_manager.py  file_converter.py  image_converter.py  init_database.py  models.py  pdf_converter.py  test_aigent_functionality.py  test_batch_processing.py  test_document.txt
aigent-frontend/: .gitignore  jest.config.js  tsconfig.json
backend/: requirements.txt
backend/aigent/: agency.py  (+10 more)
cline_docs/: AgencySwarmFramework.md  agency_implementation_guidelines.md  agency_swarm_implementation_plan.md  builder_io_research.md  ceo_agent_definition.md  codebaseSummary.md  currentTask.md  data_file_creation_test_plan.md  developer_agent_definition.md  error_handling_and_logging_guidelines.md  error_handling_logging_checklist.md  ocr_system_update.md  projectRoadmap.md  techStack.md
tests/: test_pdf_convert.py  test_spacy.py  test_tesseract_integration.py  verify_spacy.py
(+84 files in other folders)
