[tool.poetry]
name = "aigent"
version = "0.1.0"
description = "AIGENT: Intelligent Document Processing and AI Agent Toolkit"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
thinc = "^8.1.0"
pydantic = "^1.10.0"
typer = "^0.9.0"
fastapi = "^0.100.0"
gradio = "^3.50.2"
jupyterlab = "^4.0.0"
spacy = {git = "https://github.com/explosion/spaCy.git", rev = "v3.7.2"}
ipykernel = "^6.29.5"
pdfplumber = "^0.11.2"
pypdf2 = "^3.0.1"
logging = "^0.4.9.6"
iprogress = "^0.4"
pyqt5 = "^5.15.11"
sqlalchemy = "^2.0.31"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"